# dolphin-triforce

./: .gitattributes  .gitmodules  BuildMacOSUniversalBinary.py  CMakeLists.txt  CODE_OF_CONDUCT.md  Readme.md
.tx/: config
Data/: Dolphin-triforce.icns  dolphin-emu-nogui.6  dolphin-emu.6  dolphin-emu.desktop
Installer/: Installer.nsi  dolphin-emu.spec
Languages/: update-source-strings.sh  update-translated-strings.sh
Languages/po/: ar.po  ca.po  cs.po  da.po  de.po  dolphin-triforce.pot  el.po  en.po  es.po  fa.po  fr.po  hr.po  hu.po  it.po  ja.po  ko.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  tr.po  zh_CN.po  zh_TW.po
Source/Android/jni/: IniFile.cpp  MainAndroid.cpp  RiivolutionPatches.cpp  WiiUtils.cpp
Source/Core/AudioCommon/: AlsaSoundStream.cpp  AlsaSoundStream.h  AudioCommon.cpp  AudioCommon.h  (+24 more)
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp  Platform.cpp  Platform.h  PlatformFBDev.cpp  PlatformHeadless.cpp  PlatformWin32.cpp  PlatformX11.cpp
Source/DSPSpy/: ConsoleHelper.h  dsp_interface.cpp  dsp_interface.h  dspregs.h  main_spy.cpp  mem_dump.h  real_dsp.cpp  real_dsp.h
Source/DSPTool/: DSPTool.cpp  StubHost.cpp
Source/PCH/: pch.cpp  pch.h
Source/UnitTests/: StubHost.cpp  UnitTests.vcxproj
Source/VSProps/: Base.Dolphin.props  qtmoc_cl.targets
Tools/: buildbot-try.sh  gameini-ratings-from-wiki.sh  perf-disassemble.sh  run-unit-tests-android.sh  symbolicate-ppc.py  update-license-headers.sh
Tools/ghidra/: LoadDolphinMap.py  SaveDolphinMap.py
docs/: autoupdate_overview.md  gc-font-tool.cpp
(+1803 files in other folders)
